# multi-agent-codegen

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 802bfb42e4fe_initial_schema.py
backend/app/: __init__.py  cli.py  config.py  main.py  seed.py
backend/app/agents/: __init__.py  architect.py  base.py  context.py  implementation.py  optimization.py  orchestrator.py  security.py  test_agent.py
backend/app/api/: deps.py  routes_health.py  routes_pipeline.py  routes_webhook.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: __init__.py  base.py  factory.py  gemini.py
backend/app/sandbox/: __init__.py  base.py  docker.py  factory.py  local.py
backend/app/schemas/: __init__.py  pipeline.py
backend/app/services/: __init__.py  github.py  learning.py  pr_builder.py
backend/tests/: conftest.py  stubs.py  test_auth.py  test_pipeline.py  test_sandbox.py  test_smoke.py
docs/: github-app.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: RunDetail.tsx
frontend/lib/: api.ts
